--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="initial-scale=1.0,width=device-width"/>
-    <title>Final_assignment_D</title>
-    <link rel="stylesheet" type="text/css" href="../css/styles1.css"/>
+    <title>Website Template</title>
+    <link rel="stylesheet" type="text/css" href="./css/styles1.css"/>
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="../js/sticky/jquery.sticky.js"></script>
-    <script src="../js/Dropdown.src.js"></script>
+    <script src="./js/sticky/jquery.sticky.js"></script>
+    <script src="./js/Dropdown.src.js"></script>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                 <a href="#">LINK 1</a>
                 <ul>
                     <li>
-                        <a href="#">Link</a>
+                        <a href="#">This is an example</a>
                     </li>
                     <li>
                         <a href="#">Link</a>
@@ -30,7 +30,7 @@
                         <a href="#">Link</a>
                     </li>
                     <li>
-                        <a href="#">asdasd</a>
+                        <a href="#">Link</a>
                     </li>
                 </ul>
             </li>
@@ -38,7 +38,7 @@
                 <a href="…">LINK 2</a>
                 <ul>
                     <li>
-                        <a href="#">Link</a>
+                        <a href="#">This is an example</a>
                     </li>
                     <li>
                         <a href="#">Link</a>
@@ -50,7 +50,7 @@
                         <a href="#">Link</a>
                     </li>
                     <li>
-                        <a href="#">asdasd</a>
+                        <a href="#">Link</a>
                     </li>
                 </ul>
             </li>
@@ -58,7 +58,7 @@
                 <a href="…">LINK 3</a>
                 <ul>
                     <li>
-                        <a href="#">Link</a>
+                        <a href="#">This is an example</a>
                     </li>
                     <li>
                         <a href="#">Link</a>
@@ -70,7 +70,7 @@
                         <a href="#">Link</a>
                     </li>
                     <li>
-                        <a href="#">asdasd</a>
+                        <a href="#">Link</a>
                     </li>
                 </ul>
             </li>
@@ -78,7 +78,7 @@
                 <a href="…">LINK 4</a>
                 <ul>
                     <li>
-                        <a href="#">Link</a>
+                        <a href="#">This is an example</a>
                     </li>
                     <li>
                         <a href="#">Link</a>
@@ -90,7 +90,7 @@
                         <a href="#">Link</a>
                     </li>
                     <li>
-                        <a href="#">asdasd</a>
+                        <a href="#">Link</a>
                     </li>
                 </ul>
             </li>
@@ -113,7 +113,7 @@
                 eros eu tellus dignissim viverra. Maecenas erat aliquam erat volutpat. Ut venenatis ipsum quis turpis.
                 Integer cursus scelerisque lorem. Sed nec mauris id quam blandit consequat. Cras nibh mi hendrerit
                 vitae, dapibus et aliquam et magna. Nulla vitae elit. Mauris consectetuer odio vitae augue. </p>
-            <img class="images" src="../pics/content/man2.png" alt="image"/>
+            <img class="images" src="./pics/content/man2.png" alt="image"/>
 
             <p>Lorem ipsum dolor sit amet, consectetuer adadipiscing elit. Proin ut guyg yufghc ytcyccjc cjytcfg pede
                 mauris eget ipsum. Integer vel quam nunc commodo consequat. Integer ac eros eu tellus dignissim viverra.
@@ -130,12 +130,12 @@
         </article>
 
         <article>
-            <h1>Why responsive?</h1>
+            <h1>Vivamus placerat</h1>
 
-            <p>Responsive web design, aka RWD, is a very important concept. Mauris sed libero. Suspendisse facilisis
-                nulla in lacinia laoreet, lorem velit accumsan velit vel mattis libero nisl et sem. Proin interdum
-                maecenas massa turpis sagittis in, interdum non lobortis vitae massa. Quisque purus lectus, posuere eget
-                imperdiet nec sodales id arcu. Vestibulum elit pede dictum eu, viverra non tincidunt eu ligula.</p>
+            <p>Sed augue orci, lacinia eu tincidunt et eleifend nec lacus. Donec ultricies nisl ut felis, suspendisse potenti. Lorem ipsum
+            ligula ut hendrerit mollis, ipsum erat vehicula risus, eu suscipit sem libero nec erat. Aliquam erat volutpat. Sed congue
+            augue vitae neque. Nulla consectetuer porttitor pede. Fusce purus morbi tortor magna condimentum vel, placerat id blandit
+            sit amet tortor.</p>
 
             <p>Nam molestie nec tortor. Donec placerat leo sit amet velit. Vestibulum id justo ut vitae massa. Proin in
                 dolor mauris consequat aliquam. Donec ipsum, vestibulum ullamcorper venenatis augue. Aliquam tempus nisi
@@ -151,12 +151,13 @@
         </article>
 
         <article>
-            <h1>Responsible web design</h1>
+            <h1>Proin ut pede mauris eget</h1>
 
-            <p>Ynd aiudnawidn iasdnbajkwdb iabd aidbahsdb aiuwdb
-                ah baiuw baidb ahjwdb aiuwdb ahdbawidb ahwdb aiwdb ahjdb awdb ahdbsahdb awudb ahjdbaudsb ajhdwbaudb
-                abdhjasbdouyaw. Addbab?</p>
-            <img class="images" src="../pics/content/girl1.jpg" alt="image"/>
+            <p>Sed augue orci, lacinia eu tincidunt et eleifend nec lacus. Donec ultricies nisl ut felis, suspendisse potenti. Lorem ipsum
+            ligula ut hendrerit mollis, ipsum erat vehicula risus, eu suscipit sem libero nec erat. Aliquam erat volutpat. Sed congue
+            augue vitae neque. Nulla consectetuer porttitor pede. Fusce purus morbi tortor magna condimentum vel, placerat id blandit
+            sit amet tortor.</p>
+            <img class="images" src="./pics/content/girl1.jpg" alt="image"/>
 
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Proin ut pede mauris eget ipsum. Integer vel
                 quam nunc commodo consequat. Integer ac eros eu tellus dignissim viverra. Maecenas erat aliquam erat
@@ -171,7 +172,7 @@
         </article>
 
         <article>
-            <h1>About responsive</h1>
+            <h1>Nulla consectetuer</h1>
 
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed posuere interdum sem. Quisque ligula eros
                 ullamcorper quis, lacinia quis facilisis sed sapien. Mauris varius diam vitae arcu. Sed arcu lectus
