--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,15 @@
 </head>
 <body>
   <app-root></app-root>
-    <script type="text/javascript" src="./public/inline.bundle.js">
+    <script type="text/javascript" src="./mySite/public/inline.bundle.js">
     </script>
-    <script type="text/javascript" src="./public/polyfills.bundle.js">
+    <script type="text/javascript" src="./mySite/public/polyfills.bundle.js">
     </script>
-    <script type="text/javascript" src="./public/styles.bundle.js">
+    <script type="text/javascript" src="./mySite/public/styles.bundle.js">
     </script>
-    <script type="text/javascript" src="./public/vendor.bundle.js">
+    <script type="text/javascript" src="./mySite/public/vendor.bundle.js">
     </script>
-    <script type="text/javascript" src="./public/main.bundle.js">
+    <script type="text/javascript" src="./mySite/public/main.bundle.js">
     </script>
  </body>
 </html>
