angular-src public

--- a/index.html
+++ b/index.html
@@ -1,22 +1,233 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta charset="utf-8">
-    <title>Opiskelijalista</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
-        crossorigin="anonymous">
-    <link href="styles.ac89bfdd6de82636b768.bundle.css" rel="stylesheet" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="initial-scale=1.0,width=device-width"/>
+    <title>Website Template</title>
+    <link rel="stylesheet" type="text/css" href="./css/styles1.css"/>
+    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="./js/sticky/jquery.sticky.js"></script>
+    <script src="./js/Dropdown.src.js"></script>
 </head>
 
 <body>
-    <app-root></app-root>
-    <script type="text/javascript" src="inline.318b50c57b4eba3d437b.bundle.js"></script>
-    <script type="text/javascript" src="polyfills.b6b2cd0d4c472ac3ac12.bundle.js"></script>
-    <script type="text/javascript" src="main.3721fa227b7a6697b7d8.bundle.js"></script>
+<nav>
+    <div class="nav_div" role="navigation">
+        <ul class="dropdown">
+            <li>
+                <a href="#">LINK 1</a>
+                <ul>
+                    <li>
+                        <a href="#">This is an example</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="…">LINK 2</a>
+                <ul>
+                    <li>
+                        <a href="#">This is an example</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="…">LINK 3</a>
+                <ul>
+                    <li>
+                        <a href="#">This is an example</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="…">LINK 4</a>
+                <ul>
+                    <li>
+                        <a href="#">This is an example</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+</nav>
+<header role="banner">
+    <div id="header-unit">
+        <h1>This is a banner</h1><!-- Add banner text here -->
+    </div>
+</header>
+
+<section>
+    <div id="container">
+        <article>
+            <h1>Responsive Web Design</h1>
+
+            <p>This web page is responsive. Try resizing the browser window and you can see the content of this web page
+                scales accordingly. Proin ut pede mauris eget ipsum. Integer vel quam nunc commodo consequat. Integer ac
+                eros eu tellus dignissim viverra. Maecenas erat aliquam erat volutpat. Ut venenatis ipsum quis turpis.
+                Integer cursus scelerisque lorem. Sed nec mauris id quam blandit consequat. Cras nibh mi hendrerit
+                vitae, dapibus et aliquam et magna. Nulla vitae elit. Mauris consectetuer odio vitae augue. </p>
+            <img class="images" src="./pics/content/man2.png" alt="image"/>
+
+            <p>Lorem ipsum dolor sit amet, consectetuer adadipiscing elit. Proin ut guyg yufghc ytcyccjc cjytcfg pede
+                mauris eget ipsum. Integer vel quam nunc commodo consequat. Integer ac eros eu tellus dignissim viverra.
+                Maecenas erat aliquam erat volutpat. Ut venenatis ipsum quis turpis. Integer cursus scelerisque lorem.
+                Sed nec mauris id quam blandit consequat. Cras nibh mi hendrerit vitae, dapibus et aliquam et magna.
+                Nulla vitae elit. Mauris consectetuer odio vitae augue. Sed posuere interdum sem. Quisque ligula eros
+                ullamcorper quis, lacinia quis facilisis sed sapien. Mauris varius diam vitae arcu. Sed arcu lectus
+                auctor vitae, consectetuer et venenatis eget velit. Sed augue orci, lacinia eu tincidunt et eleifend nec
+                lacus. Donec ultricies nisl ut felis, suspendisse potenti. Lorem ipsum ligula ut hendrerit mollis, ipsum
+                erat vehicula risus, eu suscipit sem libero nec erat. Aliquam erat volutpat. Sed congue augue vitae
+                neque. Nulla consectetuer porttitor pede. Fusce purus morbi tortor magna condimentum vel, placerat id
+                blandit sit amet tortor.
+            </p>
+        </article>
+
+        <article>
+            <h1>Vivamus placerat</h1>
+
+            <p>Sed augue orci, lacinia eu tincidunt et eleifend nec lacus. Donec ultricies nisl ut felis, suspendisse potenti. Lorem ipsum
+            ligula ut hendrerit mollis, ipsum erat vehicula risus, eu suscipit sem libero nec erat. Aliquam erat volutpat. Sed congue
+            augue vitae neque. Nulla consectetuer porttitor pede. Fusce purus morbi tortor magna condimentum vel, placerat id blandit
+            sit amet tortor.</p>
+
+            <p>Nam molestie nec tortor. Donec placerat leo sit amet velit. Vestibulum id justo ut vitae massa. Proin in
+                dolor mauris consequat aliquam. Donec ipsum, vestibulum ullamcorper venenatis augue. Aliquam tempus nisi
+                in auctor vulputate, erat felis pellentesque augue nec, pellentesque lectus justo nec erat. Aliquam et
+                nisl. Quisque sit amet dolor in justo pretium condimentum.</p>
+
+            <p>Vivamus placerat lacus vel vehicula scelerisque, dui enim adipiscing lacus sit amet sagittis, libero enim
+                vitae mi. In neque magna posuere, euismod ac tincidunt tempor est. Ut suscipit nisi eu purus. Proin ut
+                pede mauris eget ipsum. Integer vel quam nunc commodo consequat. Integer ac eros eu tellus dignissim
+                viverra. Maecenas erat aliquam erat volutpat. Ut venenatis ipsum quis turpis. Integer cursus scelerisque
+                lorem. Sed nec mauris id quam blandit consequat. Cras nibh mi hendrerit vitae, dapibus et aliquam et
+                magna. Nulla vitae elit. Mauris consectetuer odio vitae augue.</p>
+        </article>
+
+        <article>
+            <h1>Proin ut pede mauris eget</h1>
+
+            <p>Sed augue orci, lacinia eu tincidunt et eleifend nec lacus. Donec ultricies nisl ut felis, suspendisse potenti. Lorem ipsum
+            ligula ut hendrerit mollis, ipsum erat vehicula risus, eu suscipit sem libero nec erat. Aliquam erat volutpat. Sed congue
+            augue vitae neque. Nulla consectetuer porttitor pede. Fusce purus morbi tortor magna condimentum vel, placerat id blandit
+            sit amet tortor.</p>
+            <img class="images" src="./pics/content/girl1.jpg" alt="image"/>
+
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Proin ut pede mauris eget ipsum. Integer vel
+                quam nunc commodo consequat. Integer ac eros eu tellus dignissim viverra. Maecenas erat aliquam erat
+                volutpat. Ut venenatis ipsum quis turpis. Integer cursus scelerisque lorem. Sed nec mauris id quam
+                blandit consequat. Cras nibh mi hendrerit vitae, dapibus et aliquam et magna. Nulla vitae elit. Mauris
+                consectetuer odio vitae augue. Sed posuere interdum sem. Quisque ligula eros ullamcorper quis, lacinia
+                quis facilisis sed sapien. Mauris varius diam vitae arcu. Sed arcu lectus auctor vitae, consectetuer et
+                venenatis eget velit. Sed augue orci, lacinia eu tincidunt et eleifend nec lacus. Donec ultricies nisl
+                ut felis, suspendisse potenti. Lorem ipsum ligula ut hendrerit mollis, ipsum erat vehicula risus, eu
+                suscipit sem libero nec erat. Aliquam erat volutpat. Sed congue augue vitae neque. Nulla consectetuer
+                porttitor pede. Fusce purus morbi tortor magna condimentum vel, placerat id blandit sit amet tortor.</p>
+        </article>
+
+        <article>
+            <h1>Nulla consectetuer</h1>
+
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed posuere interdum sem. Quisque ligula eros
+                ullamcorper quis, lacinia quis facilisis sed sapien. Mauris varius diam vitae arcu. Sed arcu lectus
+                auctor vitae, consectetuer et venenatis eget velit. Sed augue orci, lacinia eu tincidunt et eleifend nec
+                lacus. Donec ultricies nisl ut felis, suspendisse potenti. Lorem ipsum ligula ut hendrerit mollis, ipsum
+                erat vehicula risus, eu suscipit sem libero nec erat. Aliquam erat volutpat. Sed congue augue vitae
+                neque. Nulla consectetuer porttitor pede. Fusce purus morbi tortor magna condimentum vel, placerat id
+                blandit sit amet tortor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed posuere interdum
+                sem. Quisque ligula eros ullamcorper quis, lacinia quis facilisis sed sapien. Mauris varius diam vitae
+                arcu. Sed arcu lectus auctor vitae, consectetuer et venenatis eget velit. Sed augue orci, lacinia eu
+                tincidunt et eleifend nec lacus. Donec ultricies nisl ut felis, suspendisse potenti. Lorem ipsum ligula
+                ut hendrerit mollis, ipsum erat vehicula risus, eu suscipit sem libero nec erat. Aliquam erat volutpat.
+                Sed congue augue vitae neque. Nulla consectetuer porttitor pede. Fusce purus morbi tortor magna
+                condimentum vel, placerat id blandit sit amet tortor.</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed posuere interdum sem. Quisque ligula eros
+                ullamcorper quis, lacinia quis facilisis sed sapien. Mauris varius diam vitae arcu. Sed arcu lectus
+                auctor vitae, consectetuer et venenatis eget velit. Sed augue orci, lacinia eu tincidunt et eleifend nec
+                lacus. Donec ultricies nisl ut felis, suspendisse potenti. Lorem ipsum ligula ut hendrerit mollis, ipsum
+                erat vehicula risus, eu suscipit sem libero nec erat. Aliquam erat volutpat. Sed congue augue vitae
+                neque. Nulla consectetuer porttitor pede. Fusce purus morbi tortor magna condimentum vel, placerat id
+                blandit sit amet tortor.</p>
+        </article>
+    </div>
+    <aside>
+        <div id="aside_container">
+            <form class="aside_buttons" action="index.html" method="get">
+                <button>Example 1</button>
+            </form>
+            <form class="aside_buttons" action="index.html" method="get">
+                <button>Example 2</button>
+            </form>
+            <form class="aside_buttons" action="index.html" method="get">
+                <button>Example 3</button>
+            </form>
+            <form class="aside_buttons" action="index.html" method="get">
+                <button>Example 4</button>
+            </form>
+        </div>
+    </aside>
+</section>
+
+<footer>
+    <p>Copyright 2015 Jony Oinas © [Template RWD]</p>
+    <a href="http://www.w3.org/html/logo/">
+        <img src="http://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="30" height="31" alt="HTML5 Powered"
+             title="HTML5 Powered">
+    </a>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+             src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+             alt="Valid CSS!"/>
+    </a>
+</footer>
+
 </body>
 
 </html>
