--- a/teht14/index.html
+++ b/teht14/index.html
@@ -6,10 +6,10 @@
     <title>Opiskelijalista</title>
     <base href="/">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="./mySite/teht14/favicon.ico" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
-    <link href="styles.ac89bfdd6de82636b768.bundle.css" rel="stylesheet" />
+    <link href="./mySite/teht14/styles.ac89bfdd6de82636b768.bundle.css" rel="stylesheet" />
 </head>
 
 <body>
