--- a/teht14/index.html
+++ b/teht14/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Opiskelijalista</title>
-    <base href="/">
+    <base href="teht14">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" href="./mySite/teht14/favicon.ico" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
