--- a/teht14/index.html
+++ b/teht14/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <app-root></app-root>
-    <script type="text/javascript" src="inline.318b50c57b4eba3d437b.bundle.js"></script>
-    <script type="text/javascript" src="polyfills.b6b2cd0d4c472ac3ac12.bundle.js"></script>
-    <script type="text/javascript" src="main.3721fa227b7a6697b7d8.bundle.js"></script>
+    <script type="text/javascript" src="https://oinasjo.github.io/mySite/teht14/inline.318b50c57b4eba3d437b.bundle.js"></script>
+    <script type="text/javascript" src="https://oinasjo.github.io/mySite/teht14/polyfills.b6b2cd0d4c472ac3ac12.bundle.js"></script>
+    <script type="text/javascript" src="https://oinasjo.github.io/mySite/teht14/main.3721fa227b7a6697b7d8.bundle.js"></script>
 </body>
 
 </html>
